# monstar-cli

./: .gitignore  README.md  pyproject.toml
monstar/: cli.py
