[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monstar-cli"
version = "0.0.2"
description = "GNOME display layout manager CLI"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ps", email = "perosredo@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "PyGObject",
]
requires-python = ">=3.6"

[project.urls]
Homepage = "https://github.com/perosredo/monstar-cli"
Repository = "https://github.com/perosredo/monstar-cli"
Issues = "https://github.com/perosredo/monstar-cli/issues"

[project.scripts]
monstar = "monstar.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["monstar*"]